[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.2"
crc = "1.7"
chrono = "0.4"
tracing = "0.1.19"

[dev-dependencies]
tempfile = "3.3.0"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }